修改配置文件

--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,9 @@ github_username:  chaojunma
 # Build settings
 highlighter: rouge
 markdown: kramdown
+kramdown:
+  input: GFM
+  syntax_highlighter: rouge
 paginate: 5
 gems: [jekyll-paginate]
 paginate_path: "/page/:num"
