--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # please change the belowing settings to your own.
 
 # Site settings
-title: 马明的博客
+title: 代码搬运工
 email: aizaifenglimian@163.com
 description: 热爱技术分享，擅长微服务框架(springboot、springcloud全家桶)，懂点前端 
 baseurl: "" # the subpath of your site, e.g. /blog
